nginx_I_A/ServeurA.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-a
  namespace: ns-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-a
  template:
    metadata:
      labels:
        app: nginx-a
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        command: ["/bin/sh", "-c"]
        args:
          - echo "<h1>Serveur A</h1>" > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-a
  namespace: ns-a
spec:
  selector:
    app: nginx-a
  ports:
  - port: 80
    targetPort: 80
