nginx_I_A/ServeurB.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-b
  namespace: ns-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-b
  template:
    metadata:
      labels:
        app: nginx-b
    spec:
      containers:
      - name: nginx
        image: nginx
        command: ["/bin/sh", "-c"]
        args:
          - echo "<h1>Serveur B</h1>" > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-b
  namespace: ns-b
spec:
  selector:
    app: nginx-b
  ports:
  - port: 80
    targetPort: 80
