nginx_I_A/IngressA.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-a
  namespace: ns-a
spec:
  ingressClassName: nginx-a
  rules:
  - host: a.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-a
            port:
              number: 80
