nginx_I_A/IngressB.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-b
  namespace: ns-b
spec:
  ingressClassName: nginx-b
  rules:
  - host: b.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-b
            port:
              number: 80
